// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multichannel carousel COMPACT mode all elements in same message 1`] = `
[
  "
Previo",
  "
Durante",
]
`;

exports[`Multichannel carousel COMPACT mode dynamic carousel (just text in button) with payload/path buttons 1`] = `
[
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    newkey={0}
    type="text"
    typing={0}
  >
    1. Previo a la compra
  </message>,
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    newkey={1}
    type="text"
    typing={0}
  >
    2. Durante la compra
  </message>,
]
`;

exports[`Multichannel carousel COMPACT mode dynamic carousel with URL and postback buttons and displaying only postback buttons as whatsapp buttons 1`] = `
[
  <message
    buttonsAsText={0}
    delay={0}
    indexMode="number"
    markdown={0}
    newkey={0}
    type="text"
    typing={0}
  >
    *Title1* _Subtitle1_
    <button
      payload="Payload1"
    >
      Previo a la compra
    </button>
  </message>,
  <message
    buttonsAsText={0}
    delay={0}
    indexMode="number"
    markdown={0}
    newkey={1}
    type="text"
    typing={0}
  >
    *Title2* _Subtitle2_
    <button
      payload="Payload2"
    >
      Durante la compra
    </button>
  </message>,
  <message
    body="_Snatch_ _Five minutes, Turkish_"
    displayText="Visit website"
    type="whatsapp-cta-url-button"
    url="https://www.imdb.com/title/tt0208092"
  />,
  <message
    body="_El laberinto del fauno_ _2006_"
    displayText="Visit website"
    type="whatsapp-cta-url-button"
    url="https://www.imdb.com/title/tt0457430"
  />,
]
`;

exports[`Multichannel carousel COMPACT mode dynamic carousel with payload/path buttons 1`] = `
[
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    newkey={0}
    type="text"
    typing={0}
  >
    *Title1* _Subtitle1_
    
1. Previo a la compra
  </message>,
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    newkey={1}
    type="text"
    typing={0}
  >
    *Title2* _Subtitle2_
    
2. Durante la compra
  </message>,
]
`;

exports[`Multichannel carousel COMPACT mode dynamic carousel with url buttons 1`] = `
[
  <message
    body="_Snatch_ _Five minutes, Turkish_"
    displayText="Visit website"
    type="whatsapp-cta-url-button"
    url="https://www.imdb.com/title/tt0208092"
  />,
  <message
    body="_El laberinto del fauno_ _2006_"
    displayText="Visit website"
    type="whatsapp-cta-url-button"
    url="https://www.imdb.com/title/tt0457430"
  />,
]
`;
